Доделан редактор постов

--- a/cloud/templates/auth/signup.html
+++ b/cloud/templates/auth/signup.html
@@ -5,7 +5,7 @@
     Cloud Регистрация
 {% endblock %}
 
-{% block signup_active%}
+{% block signup_active %}
     class="active"
 {% endblock %}
 
@@ -24,35 +24,40 @@
                 <div class="container-fluid sign-form">
 
                     <div class="form-group">
-                      <label for="email" class="col-form-label">Почта<b style="color: crimson">*</b></label>
-                      <div class="input-group">
-                          <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-                          <input class="form-control" type="email" value="" name="email" id="email" placeholder="Введите почту">
-                      </div>
+                        <label for="email" class="col-form-label">Почта<b style="color: crimson">*</b></label>
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+                            <input class="form-control" type="email" value="" name="email" id="email"
+                                   placeholder="Введите почту">
+                        </div>
                     </div>
 
                     <div class="form-group">
-                      <label for="username" class="col-form-label">Логин<b style="color: crimson">*</b></label>
-                      <div class="input-group">
-                          <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                          <input class="form-control" type="text" name="username" id="username" placeholder="Придумайте логин">
-                      </div>
+                        <label for="username" class="col-form-label">Логин<b style="color: crimson">*</b></label>
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                            <input class="form-control" type="text" name="username" id="username"
+                                   placeholder="Придумайте логин">
+                        </div>
                     </div>
 
                     <div class="form-group">
-                      <label for="password" class="col-form-label">Пароль<b style="color: crimson">*</b></label>
-                      <div class="input-group">
-                          <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                          <input class="form-control" type="password" name="password" id="password" placeholder="Введите пароль">
-                      </div>
+                        <label for="password" class="col-form-label">Пароль<b style="color: crimson">*</b></label>
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                            <input class="form-control" type="password" name="password" id="password"
+                                   placeholder="Введите пароль">
+                        </div>
                     </div>
 
                     <div class="form-group">
-                      <label for="second_password" class="col-form-label">Повторите пароль<b style="color: crimson">*</b></label>
-                      <div class="input-group">
-                          <span class="input-group-addon"><i class="glyphicon glyphicon-repeat"></i></span>
-                          <input class="form-control" type="password" name="second_password" id="second_password" placeholder="Повторите пароль">
-                      </div>
+                        <label for="second_password" class="col-form-label">Повторите пароль<b
+                                style="color: crimson">*</b></label>
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-repeat"></i></span>
+                            <input class="form-control" type="password" name="second_password" id="second_password"
+                                   placeholder="Повторите пароль">
+                        </div>
                     </div>
 
                     <div id="error" class="error">
@@ -60,7 +65,7 @@
                     </div>
 
                     <div class="form-group">
-                         <input class="btn btn-default col-xs-12" type="submit" value="Зарегистрироваться"/>
+                        <input class="btn btn-default col-xs-12" type="submit" value="Зарегистрироваться"/>
                     </div>
 
                 </div>
@@ -75,15 +80,17 @@
                     <hr>
 
                     <div class="form-group">
-                    <label for="first-name" class="col-form-label">Имя</label>
-                    <input class="form-control" type="text" name="first-name" id="first-name"
-                             placeholder="Введите имя" pattern="^[А-Яа-яЁё]{2,20}$" title="(от 3 до 20 символов, без пробелов)">
+                        <label for="first-name" class="col-form-label">Имя</label>
+                        <input class="form-control" type="text" name="first-name" id="first-name"
+                               placeholder="Введите имя" pattern="^[А-Яа-яЁё]{2,20}$"
+                               title="(от 3 до 20 символов, без пробелов)">
                     </div>
 
                     <div class="form-group">
                         <label for="last-name" class="col-form-label">Фамилия</label>
                         <input class="form-control" type="text" name="last-name" id="last-name"
-                                 placeholder="Введите фамилию" pattern="^[А-Яа-яЁё]{2,20}$" title="(от 3 до 20 символов, без пробелов)">
+                               placeholder="Введите фамилию" pattern="^[А-Яа-яЁё]{2,20}$"
+                               title="(от 3 до 20 символов, без пробелов)">
                     </div>
 
                     <div class="form-group django-control">
@@ -135,5 +142,17 @@
 {% block js %}
 
     <script src="{% static "js/department_search.js" %}"></script>
+
+    <script>
+        $(document).ready(function () {
+            clear_and_disabled_all_elements();
+            get_all_universities();
+
+            $("#id_university").change(function(){university_updated($(this).val())});
+            $("#id_department").change(function(){department_updated($(this).val())});
+            $("#id_chair").change(function(){chair_updated($(this).val())});
+            $("#id_program").change(function(){program_updated($(this).val())});
+        });
+    </script>
 
 {% endblock %}
