--- a/cloud/templates/settings.html
+++ b/cloud/templates/settings.html
@@ -57,7 +57,6 @@
                             <button class="btn btn-primary" type="submit" style="width: 100%">Сохранить</button>
                         </div>
                     </form>
-
                 </div>
 
                 <hr>
@@ -95,9 +94,87 @@
                 </div>
 
                 <hr>
+
+                <form method="post" action="{% url 'change_user' %}" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    <div class="container-fluid">
+
+                        <div class="form-group django-control">
+                            <label class="col-form-label">Имя</label>
+                            {{ change_user_form.first_name }}
+                        </div>
+
+                        <div class="form-group django-control">
+                            <label class="col-form-label">Фамилия</label>
+                            {{ change_user_form.last_name }}
+                        </div>
+
+                        <div class="panel panel-info">
+                            <div class="panel-heading" data-toggle="collapse" href="#structure">
+                               Университет - Факультет - Кафедра
+                            </div>
+                        </div>
+                        <div id="structure" class="collapse">
+                            <div class="form-group django-control">
+                                <label class="col-form-label">Университет</label>
+                                <select name="university" id="id_university"></select>
+                            </div>
+
+                            <div class="form-group django-control">
+                                <label class="col-form-label">Факультет</label>
+                                <select name="department" id="id_department"></select>
+                            </div>
+
+                            <div class="form-group django-control">
+                                <label class="col-form-label">Кафедра</label>
+                                <select name="chair" id="id_chair"></select>
+                            </div>
+                        </div>
+
+                        <div class="form-group django-control">
+                            <label class="col-form-label">Программа обучения</label>
+                            {{ change_user_info_form.program }}
+                        </div>
+
+                        <div class="form-group django-control">
+                            <label class="col-form-label">Курс обучения</label>
+                            {{ change_user_info_form.course }}
+                        </div>
+
+                        <button class="btn btn-primary full-width" type="submit">Сохранить данные</button>
+
+                    </div>
+                </form>
+
+                <hr>
                 <a href="{% url 'signout' %}"> <div class="btn btn-warning" >Выйти!</div></a>
             </div>
 
     </div>
+
+{% endblock %}
+
+{% block js %}
+
+    <script src="{% static "js/department_search.js" %}"></script>
+
+    <script>
+        $(document).ready(function () {
+            get_all_universities();
+
+            $("#id_university").change(function(){university_updated($(this).val())});
+            $("#id_department").change(function(){department_updated($(this).val())});
+            $("#id_chair").change(function(){chair_updated($(this).val())});
+            $("#id_program").change(function(){program_updated($(this).val())});
+
+            //установка текущего университета, факультета и кафедры
+            university_updated(  {{ user_info.program.chair.department.university.pk }}  );
+            department_updated(  {{ user_info.program.chair.department.pk }}  );
+            chair_updated(  {{ user_info.program.chair.pk }}  );
+            program_updated(  {{ user_info.program.pk }}  );
+
+            $("#id_program").attr('required', true);
+        });
+    </script>
 
 {% endblock %}
